 - Deleting some installation lang files: bg-BG, bn-BD, eo-XX, id-ID, is-IS, ml-IN, mn-MN, sq-AL, vi-VN
 # Updating generator to 1.7
 $ Updating installation ini files: ta-IN

09-Jul-2011 Andrew Eddie
 ^ JPlatform class file moved to /libraries/ to sync with platform repo.
 ! Database package docblocks sync'd with platform repo. 
 ! Error package docblocks sync'd with platform repo. 
 
08-Jul-2011 Andrew Eddie
 ! Application package docblocks sync'd with platform repo. 
 ! Client package docblocks sync'd with platform repo. 

07-Jul-2011 Christophe Demko
 # [#26282] user manager - last visited date (bill richardson)
 # [#26348] Sync changes from the platform - JHTML edition (Rouven Weßling)

08-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: da-DK, de-DE, en-AU, en-US, gl-ES, gu-IN, he-IL, hr-HR, ja-JP, km-KH, lv-LV, mk-MK, nb-NO, nn-NO, ru-RU, uk-UA

07-Jul-2011 Christophe Demko
 # [#26247] Automatic update from 1.6.4 will leave some unused file (Big thanks to all testers!)
 # [#26258] the contactcreator-PlugIn interrupts the contact-categories and -names (Nikolai Plath)

07-Jul-2011 Jean-Marie Simonet
 + [#20733] Some core component do not correctly uninstall. Thanks Christophe.
 $ Updated fr-FR installation ini file
 $ Alpha ordering of en-GB.files_joomla.sys.ini

06-Jul-2011 Christophe Demko
 # [#26313] Remove more images from the installation (like 26262) (Rouven Weßling)
 + [#26276] Association between menu items in multilingual settings.
 + [#26224] Add an ordering column to table jos_languages
 # [#26300] The com_categories component display the note field twice
 # [#26321] Incorect css in sample data (article "Beez 20") (Peter Chovancak)
 # [#26314] Unused setting in Contact Manager Options (bill richardson, Nikolai Plath)
 - Removing comments in update SQL files since JDatabase::splitSql does not manage them
 + Add NOT NULL to the ordering column of #__language

05-Jul-2011 Jean-Marie Simonet